--- a/Themes-Interior/src/index.html
+++ b/Themes-Interior/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href=".././/src/assets/logos/logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Quattrocento&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/f1704facaa.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Josefin+Sans:ital,wght@0,700;1,700&family=Press+Start+2P&family=Quattrocento&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
   <app-root></app-root>
